# homeassistant-project-template

./: AGENTS.md  Containerfile  Makefile  README.md  pyproject.toml
.agents/: AGENTS.md
.agents/commands/: AGENTS.md  commit.md  extract-learnings.md  extract-templates.md  git-squash.md  update-agents-md.md
.agents/docs/architecture/: decisions.md
.agents/docs/architecture/homeassistant/: addon-communication.md  authentication.md  discovery.md  ingress.md  storage.md
.agents/docs/conventions/: coding-style.md  imports.md  naming.md  project-structure.md
.agents/docs/patterns/: addon-structure.md  error-handling.md  logging.md  options-handling.md  supervisor-api.md  typing.md
.agents/docs/tooling/: bashio.md  podman.md  pytest.md  ruff.md  uv.md
.agents/docs/workflows/: local-development.md  pr-process.md  publishing.md  releases.md  testing.md
.agents/scratch/context/: _template.md
.agents/scratch/decisions/: _template.md
.agents/scratch/notes/: _template.md
.agents/scratch/research/: _template.md
addon/: DOCS.md  Dockerfile  build.yaml  config.yaml
addon/rootfs/etc/services.d/addon/: finish  run
addon/translations/: en.yaml
scripts/: build-addon.sh  setup-local-dev.sh  test-local.sh  test-with-ha.sh
src/: AGENTS.md  __init__.py
src/my_addon/: __init__.py  __main__.py  config.py  server.py  supervisor.py
tests/: conftest.py
